# RL.cu

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.claude/: CLAUDE.md
.claude/skills/add_new_kernel/: SKILL.md
docs/: ATTENTION.md  DESIGN.md  ENGINE.md  ROADMAP.md
include/: cuda_utils.h
include/engine/: block_manager.h  llm_engine.h  model_runner.cuh  scheduler.h
include/kernels/: adamw.cuh  attention.cuh  embedding.cuh  fused_norm_linear.cuh  linear.cuh  rmsnorm.cuh  rope.cuh  sampler.cuh  softmax.cuh  swiglu.cuh
include/model/: config.h  kv_cache.cuh  loss.cuh  qwen3.h  sampling_parmas.h  tokenizer.h  weights.h
include/training/: GRPO_trainer.h  SFT_trainer.h  dataloader.h  logger.h  lr_scheduler.h  optimizer.h  trainer.h
python_scripts/: bench_hf_forward.py  bench_nanollm.py  bench_sampler.py  bench_vllm.py  compare_vllm.py  download.py  plot_training.py  prepare_data.py
scripts/: prepare_data.py  reference_qwen3.py  train_grpo_trl.py
src/kernels/: adamw.cu  attention.cu  config.cpp  embedding.cu  fused_norm_linear.cu  linear.cu  rmsnorm.cu  rope.cu  sampler.cu  softmax.cu  swiglu.cu  weights.cpp
src/model/: kv_cache.cu  qwen3.cu
tests/: bench_decode.cu  generate_references.py  test_adamw.cu  test_attention.cu  test_attention_backward.cu  test_dataloader.cpp  test_embedding.cu  test_embedding_backward.cu  test_fused_norm_linear.cu  test_fwd_bwd.cu  test_kv_cache.cu  test_linear.cu  test_linear_backward.cu  test_llmengine.cu  test_loading_weights.cpp  test_lr_scheduler.cpp  test_qwen3.cu  test_qwen3_backward.cu  test_qwen3_forward.cu  test_rmsnorm.cu  test_rmsnorm_backward.cu  test_rope.cu  test_rope_backward.cu  test_sampler.cu  test_softmax.cu  test_swiglu.cu  test_swiglu_backward.cu  train_grpo.cu  train_sft.cu
